--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,10 @@ textarea{
     width: 100%;
     height: 100px;
 }
-textarea::placeholder{
-    color:black
+textarea:placeholder{
+    color:black;
+    margin-bottom: 20px;
+
 }
 button{
     background-color: #37af65;
@@ -90,4 +92,12 @@ button{
     display: block;
     text-align: center;
     width: 100%;
+    margin-top: 10px;
+}
+
+.option_button {
+    display: inline-block;
+    width: auto;
+    margin: 20px;
+    margin-left: 0;
 }
